WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49568
[Qt] ZoomTextOnly doesn't work
https://bugs.webkit.org/show_bug.cgi?id=49568
Summary
[Qt] ZoomTextOnly doesn't work
Yi Shen
Reported
2010-11-15 15:25:16 PST
User can set ZoomTextOnly in the QWebSetting, however, qwebframe doesn't check the ZoomTextOnly attribute when applying the zoom...
Attachments
first try
(2.55 KB, patch)
2010-11-15 15:35 PST
,
Yi Shen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yi Shen
Comment 1
2010-11-15 15:35:41 PST
Created
attachment 73938
[details]
first try
Andreas Kling
Comment 2
2010-11-15 15:45:48 PST
Comment on
attachment 73938
[details]
first try Nice catch! r=me
Yi Shen
Comment 3
2010-11-15 15:56:39 PST
(In reply to
comment #2
)
> (From update of
attachment 73938
[details]
) > Nice catch! r=me
Thanks for quick review, kling :)
WebKit Commit Bot
Comment 4
2010-11-15 20:14:01 PST
Comment on
attachment 73938
[details]
first try Clearing flags on attachment: 73938 Committed
r72055
: <
http://trac.webkit.org/changeset/72055
>
WebKit Commit Bot
Comment 5
2010-11-15 20:14:07 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-11-15 21:13:09 PST
http://trac.webkit.org/changeset/72055
might have broken Leopard Intel Release (Tests) The following tests are not passing: fast/block/float/015.html
Csaba Osztrogonác
Comment 7
2010-11-16 02:35:29 PST
And a follow-up patch landed in:
http://trac.webkit.org/changeset/72069
... Guys, could you watch the bots next time after commit?
Yi Shen
Comment 8
2010-11-16 04:52:45 PST
(In reply to
comment #7
)
> And a follow-up patch landed in:
http://trac.webkit.org/changeset/72069
... > Guys, could you watch the bots next time after commit?
oops, Sorry, I will look at the tests failed issue ASAP.
Yi Shen
Comment 9
2010-11-16 06:17:32 PST
(In reply to
comment #7
)
> And a follow-up patch landed in:
http://trac.webkit.org/changeset/72069
... > Guys, could you watch the bots next time after commit?
Checked the ChangeLog, and found Dan has disabled this test that was failing intermittently due to
https://bugs.webkit.org/show_bug.cgi?id=49579
. I don't think this test is caused by this patch.
Csaba Osztrogonác
Comment 10
2010-11-16 06:30:20 PST
(In reply to
comment #9
)
> Checked the ChangeLog, and found Dan has disabled this test that was failing intermittently due to
https://bugs.webkit.org/show_bug.cgi?id=49579
. I don't think this test is caused by this patch.
I meant minor pixel differences caused by your patch and not this flakey test.
Yi Shen
Comment 11
2010-11-16 14:13:36 PST
(In reply to
comment #10
)
> (In reply to
comment #9
) > > Checked the ChangeLog, and found Dan has disabled this test that was failing intermittently due to
https://bugs.webkit.org/show_bug.cgi?id=49579
. I don't think this test is caused by this patch. > > I meant minor pixel differences caused by your patch and not this flakey test.
I rolled back my changes but still see this test failed... hmmm, need take more time to look at it.
Yi Shen
Comment 12
2010-11-17 06:29:27 PST
The test failure is introduced by
r72040
and fixed in <
http://trac.webkit.org/changeset/72135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug