2010-11-15  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Andreas Kling.

        [Qt] ZoomTextOnly doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=49568

        Check QWebSettings::ZoomTextOnly attribute before applying zoom

        * Api/qwebframe.cpp:
        (QWebFrame::textSizeMultiplier):
        (QWebFrame::setZoomFactor):
        (QWebFrame::zoomFactor):
        * Api/qwebframe_p.h:
        (QWebFramePrivate::QWebFramePrivate):

git-svn-id: svn://svn.chromium.org/blink/trunk@72055 bbb929c8-8fbe-4397-9dbb-9b2b20218538