third_party/WebKit/WebKit/qt/Api/qwebframe.cpp
@@ -1190,7 +1190,7 @@ void QWebFrame::setTextSizeMultiplier(qreal factor)
 */
 qreal QWebFrame::textSizeMultiplier() const
 {
-    return d->zoomTextOnly ? d->frame->textZoomFactor() : d->frame->pageZoomFactor();
+    return page()->settings()->testAttribute(QWebSettings::ZoomTextOnly) ? d->frame->textZoomFactor() : d->frame->pageZoomFactor();
 }
 
 /*!
@@ -1201,7 +1201,7 @@ qreal QWebFrame::textSizeMultiplier() const
 
 void QWebFrame::setZoomFactor(qreal factor)
 {
-    if (d->zoomTextOnly)
+    if (page()->settings()->testAttribute(QWebSettings::ZoomTextOnly))
         d->frame->setTextZoomFactor(factor);
     else
         d->frame->setPageZoomFactor(factor);
@@ -1209,7 +1209,7 @@ void QWebFrame::setZoomFactor(qreal factor)
 
 qreal QWebFrame::zoomFactor() const
 {
-    return d->zoomTextOnly ? d->frame->textZoomFactor() : d->frame->pageZoomFactor();
+    return page()->settings()->testAttribute(QWebSettings::ZoomTextOnly) ? d->frame->textZoomFactor() : d->frame->pageZoomFactor();
 }
 
 /*!
