third_party/WebKit/WebKit/qt/Api/qwebframe_p.h
@@ -81,7 +81,6 @@ public:
 #if USE(ACCELERATED_COMPOSITING) && USE(TEXTURE_MAPPER)
         , rootGraphicsLayer(0)
 #endif
-        , zoomTextOnly(false)
         {}
     void init(QWebFrame* qframe, QWebFrameData* frameData);
     void setPage(QWebPage*);
@@ -116,7 +115,6 @@ public:
     WebCore::TextureMapperContentLayer* rootGraphicsLayer;
     OwnPtr<WebCore::TextureMapper> textureMapper;
 #endif
-    bool zoomTextOnly;
 };
 
 class QWebHitTestResultPrivate {
